INTYG-5301: Uppdaterat logiken för vilken högerflik som skall vara aktiv beroende på signerat/skickat/komplettering osv

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcHelpTipsPanelTab/wcHelpTipsPanelTab.directive.html
@@ -6,5 +6,6 @@
 
   <div>Här är lite tips och hjälp för {{config.intygContext.type}}.</div>
   <p>Signerat? {{config.intygContext.isSigned}}</p>
+  <p>Skickat? {{config.intygContext.isSent}}</p>
 
 </wc-support-panel-scrollable-body>
