INTYG-5569: Generell hantering av padding mellan komponenter, frågor och kategorier.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDropdown/ueDropdown.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDropdown/ueDropdown.directive.html
@@ -1,5 +1,5 @@
-<ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
-  <ue-form-label config="::config.label"></ue-form-label>
+<ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]" class="ue-del-fraga">
+  <ue-label config="::config.label"></ue-label>
 
 
   <ui-select theme="bootstrap" search-enabled="false" ng-model="modelGetterSetter"
