--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePatientAddressUpdater/uePatientAddressUpdater.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/uePatientAddressUpdater/uePatientAddressUpdater.directive.html
@@ -1,4 +1,4 @@
-<div class="form-{{::config.formType}} row" wc-authority="HANTERA_PERSONUPPGIFTER">
+<div class="form-{{::config.formType}} row ue-del-fraga" wc-authority="HANTERA_PERSONUPPGIFTER">
   <div class="col-md-{{::config.labelColSize}} control-label">
     <label class="form-control-label"></label>
   </div>
