--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
@@ -1,5 +1,5 @@
 <div wc-date-period-manager model="model" class="sjukskrivningar">
-  <ue-form-label config="::config.label"></ue-form-label>
+  <ue-label config="::config.label"></ue-label>
 
   <wc-alert-message ng-attr-id="lastEffectiveDateNoticeText|ueDomIdFilter" alert-severity="info" ng-if="lastEffectiveDateNoticeText">
     {{lastEffectiveDateNoticeText}}
