--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTypeahead/ueTypeahead.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTypeahead/ueTypeahead.directive.html
@@ -1,5 +1,5 @@
-<div class="input-full">
-  <ue-form-label config="::config.label"></ue-form-label>
+<div class="input-full ue-del-fraga">
+  <ue-label config="::config.label"></ue-label>
   <div>
     <input type="text"
            class="form-control"
