--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueAlert/ueAlert.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueAlert/ueAlert.directive.html
@@ -1,3 +1,3 @@
-<wc-alert-message alert-severity="{{::config.alertType}}">
+<wc-alert-message alert-severity="{{::config.alertType}}" class="ue-del-fraga">
     <span dynamic-label key="{{::config.key}}" style="white-space:pre-line"></span>
 </wc-alert-message>
