--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueFormLabel/ueFormLabel.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueFormLabel/ueFormLabel.scss
@@ -1,4 +1,3 @@
-
 /*!
  * Copyright (C) 2018 Inera AB (http://www.inera.se)
  *
@@ -18,5 +17,8 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-ue-grid {
+ue-form-label {
+  > ue-label > h5 {
+    padding:0;
+  }
 }
