--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.html
@@ -1,6 +1,5 @@
-<ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
+<ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]" class="ue-del-fraga">
   <div class="form-horizontal">
-    <ue-form-label config="::config.label"></ue-form-label>
 
     <div>
       <label class="big-radio-label radio-inline">
