--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.scss
@@ -18,7 +18,19 @@
  */
 
 ue-korkort-bedomning {
+
+  display: block;
+
+  .form-horizontal .radio-inline {
+    padding-bottom: 14px;
+  }
+
+  .form-horizontal .checkbox-inline {
+    padding-bottom: 14px;
+  }
+
   .korkortstyper {
     margin-left: 20px;
   }
+
 }
