--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadio/ueRadio.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueRadio/ueRadio.directive.scss
@@ -1,4 +1,3 @@
-
 /*!
  * Copyright (C) 2018 Inera AB (http://www.inera.se)
  *
@@ -18,5 +17,11 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-ue-grid {
+ue-radio {
+  display: block;
+  margin-bottom: -14px;
+  .form-horizontal .radio-inline, .radio-inline, .radio {
+    padding-top: 0;
+    padding-bottom: 14px;
+  }
 }
