--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueText/ueText.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueText/ueText.directive.html
@@ -5,7 +5,7 @@
     <h5 ng-switch-when="h5" class="ue-del-fraga">
         <span combined-label dyn-key="{{::config.label.variableLabelKey}}" stat-key="{{::config.label.key}}"></span>
     </h5>
-    <div ng-switch-default class="{{::config.label.htmlClass}}">
+    <div ng-switch-default class="{{::config.label.htmlClass}} ue-del-fraga">
         <span combined-label dyn-key="{{::config.label.variableLabelKey}}" stat-key="{{::config.label.key}}"></span>
     </div>
 </div>
