--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.scss
@@ -19,6 +19,18 @@
 
 ue-dodsorsak-row {
 
+  input.form-control {
+    height: 38px;
+    border: 1px solid $wc-color-15;
+    border-radius: 4px;
+    transition: border-color .36s ease-in-out, box-shadow .36s ease-in-out;
+  }
+  input.form-control:focus {
+    outline: none !important;
+    border: 1px solid $wc-color-21;
+    box-shadow: 2px 2px 4px 0 $black_12;
+  }
+
   padding-top: 20px;
 
   .dodsorsak-row__controls {
