INTYG-5557: Uppdaterat designen på intygsfootern (signerat vyn)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
@@ -71,3 +71,7 @@ $url-back-link-icon: url('/img/back-link-icon.gif');
 $url-settings-icon: url('/img/settings_ikon.png');
 $url-settings-hoover: url('/img/settings_hoover.png');
 $url-col-shadow: url('/img/col-shadow.png');
+
+$intyg-signed-card-header-padding: 18px 30px 10px 30px;
+$intyg-signed-card-body-padding: 2px 30px 10px 30px;
+$intyg-signed-card-h3-padding: 20px 0 6px;
