--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-uv-override.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_wc-uv-override.scss
@@ -27,7 +27,7 @@
 
 uv-kategori {
   h2 {
-    padding: 18px 20px 8px 28px;
+    padding: $intyg-signed-card-header-padding;
     background-color: $wc-color-00;
     color: $wc-color-07;
     border-radius: 4px 4px 0 0;
@@ -36,14 +36,14 @@ uv-kategori {
 
   .kategori-body {
     background: $uv-intyg-body-bg;
-    padding: 2px 28px 10px 28px;
+    padding: $intyg-signed-card-body-padding;
     box-shadow: none;
     border-radius: 0 0 4px 4px;
     h3 {
       font-size: 16px;
       font-weight: bold;
       font-family: $font-0, $font-3;
-      padding: 20px 0 6px;
+      padding: $intyg-signed-card-h3-padding;
       color: $wc-color-08;
     }
   }
