INTYG-5463: Ny design utkastheader

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcNewPersonIdMessage/wcNewPersonIdMessage.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcNewPersonIdMessage/wcNewPersonIdMessage.directive.html
@@ -1,4 +1,4 @@
-<div id="wc-new-person-id-message" class="padding-top-medium" ng-show="show">
+<div id="wc-new-person-id-message" ng-show="show">
   <wc-alert-message alert-severity="warning" id="nyttPersonnummer">
     <span ng-bind-html="message"></span>
   </wc-alert-message>
