--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.scss
@@ -46,3 +46,7 @@ wc-intyg-header .wc-page-header {
   vertical-align: bottom;
   margin-bottom: -5px;
 }
+
+#tillbakaButton {
+  margin-right: 50px;
+}
