--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusSlot.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusSlot.directive.scss
@@ -1,5 +1,5 @@
 /*!
- * Copyright (C) 2017 Inera AB (http://www.inera.se)
+ * Copyright (C) 2018 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
  *
@@ -17,6 +17,14 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-wc-new-person-id-message {
-  display: inline-flex;
+wc-intyg-status-slot {
+  .wc-color-05 {
+    color: $wc-color-05;
+  }
+  .wc-color-10 {
+    color: $wc-color-10;
+  }
+  .wc-color-11 {
+    color: $wc-color-11;
+  }
 }
