--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckboxDate/ueCheckboxDate.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckboxDate/ueCheckboxDate.directive.html
@@ -2,12 +2,16 @@
   <ue-validation-wrapper validations="validation.messagesByField[config.modelProp.toLowerCase()]">
     <div class="form-horizontal row">
       <div class="col-md-6">
-        <label class="checkbox-inline big-checkbox-label">
-          <input ng-attr-id="checkbox_{{::config.modelProp|ueDomIdFilter}}" type="checkbox" class="big-checkbox" ng-model="checkbox.checked" value="true">
-          <span dynamic-label key="{{::config.label.key}}"></span>
-        </label>
-        <span wc-help-chevron help-text-key="{{::config.label.helpKey}}"></span>
-        <span wc-help-chevron-text help-text-key="{{::config.label.helpKey}}"></span>
+        <wc-checkbox-wrapper>
+
+          <input ng-attr-id="checkbox_{{::config.modelProp|ueDomIdFilter}}" type="checkbox" ng-model="checkbox.checked" value="true">
+
+          <label ng-attr-for="checkbox_{{::config.modelProp|ueDomIdFilter}}">
+            <span dynamic-label key="{{::config.label.key}}"></span>
+            <span wc-help-chevron help-text-key="{{::config.label.helpKey}}"></span>
+            <span wc-help-chevron-text help-text-key="{{::config.label.helpKey}}"></span>
+          </label>
+        </wc-checkbox-wrapper>
       </div>
       <div class="col-md-6">
         <span wc-date-picker-field target-model="model[config.modelProp]" add-date-parser="loose" on-blur="validate()"
