--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroup/ueCheckgroup.directive.html
@@ -2,10 +2,12 @@
   <div class="form-horizontal">
     <ue-label config="::config.label"></ue-label>
     <div data-ng-repeat="choice in ::config.choices">
-      <label class="big-checkbox-label checkbox-inline">
-        <input ng-attr-id="{{::config.modelProp}}-{{::choice|ueDomIdFilter}}" type="checkbox" class="big-checkbox" ng-model="model[config.modelProp][choice]" ng-change="updateValidation()">
-        <span dynamic-label key="{{::config.code}}.{{::choice}}.RBK"></span>
-      </label>
+      <wc-checkbox-wrapper>
+        <input ng-attr-id="{{::config.modelProp}}-{{::choice|ueDomIdFilter}}" type="checkbox" ng-model="model[config.modelProp][choice]" ng-change="updateValidation()">
+        <label ng-attr-for="{{::config.modelProp}}-{{::choice|ueDomIdFilter}}">
+          <span dynamic-label key="{{::config.code}}.{{::choice}}.RBK"></span>
+        </label>
+      </wc-checkbox-wrapper>
       <div ng-if="::config.enableHelp">
         <span wc-help-chevron help-text-key="{{::config.code}}.{{::choice}}.HLP"></span>
         <span wc-help-chevron-text help-text-key="{{::config.code}}.{{::choice}}.HLP"></span>
