--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
@@ -2,14 +2,15 @@
   <div class="row form-horizontal">
     <ue-label class="col-sm-12" config="::config.label"></ue-label>
     <div class="col-md-2 col-sm-4" data-ng-repeat="choice in modelGetterSetter()">
-      <label class="big-checkbox-label checkbox-inline">
+     <wc-checkbox-wrapper>
         <input ng-attr-id="{{::config.modelProp}}-{{::choice.type|ueDomIdFilter}}"
                type="checkbox"
-               class="big-checkbox"
                ng-model="choice.selected"
                ng-change="updateValidation()">
+      <label ng-attr-for="{{::config.modelProp}}-{{::choice.type|ueDomIdFilter}}">
         <span dynamic-label key="{{::config.labelTemplate | ueLabelFilter: choice.type}}"></span>
       </label>
+     </wc-checkbox-wrapper>
     </div>
   </div>
 </ue-validation-wrapper>
