--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueKorkortBedomning/ueKorkortBedomning.directive.html
@@ -17,14 +17,15 @@
     <div class="row korkortstyper">
       <div ng-if="!model[config.modelProp].kanInteTaStallning" class="fold-animation">
         <div class="col-md-2 col-sm-4" data-ng-repeat="choice in modelGetterSetter().korkortstyp">
-          <label class="big-checkbox-label checkbox-inline">
+         <wc-checkbox-wrapper>
             <input ng-attr-id="{{::config.modelProp}}-{{::choice.type|ueDomIdFilter}}"
-                   type="checkbox"
-                   class="big-checkbox"
-                   ng-model="choice.selected"
-                   ng-change="updateValidation()">
-            <span dynamic-label key="{{::config.labelTemplate | ueLabelFilter: choice.type}}"></span>
-          </label>
+                     type="checkbox"
+                     ng-model="choice.selected"
+                     ng-change="updateValidation()">
+            <label ng-attr-for="{{::config.modelProp}}-{{::choice.type|ueDomIdFilter}}">
+              <span dynamic-label key="{{::config.labelTemplate | ueLabelFilter: choice.type}}"></span>
+            </label>
+         </wc-checkbox-wrapper>
         </div>
       </div>
     </div>
