--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.scss
@@ -1,5 +1,6 @@
 ue-textfield {
   input.form-control {
+    height: 38px;
     width: 100%;
     border: 1px solid $wc-color-15;
     border-radius: 4px;
