INTYG-5243: Fixade padding och gjorde A till E direktiv.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcIntygPatientNamnPersonnummer/wcIntygPatientNamnPersonnummer.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcIntygPatientNamnPersonnummer/wcIntygPatientNamnPersonnummer.directive.html
@@ -1,7 +1,7 @@
 <span class="wc-intyg-patient-namn-personnummer">
-  <label class="control-label" id="patientNamnPersonnummer">
- {{ patientName }} - {{ personId | PersonIdFormatter }}
-  </label>
+  <span id="patientNamnPersonnummer">
+    {{ patientName }} - {{ personId | PersonIdFormatter }}
+  </span>
 
   <span class="old-person-id" data-ng-if="oldPersonId && oldPersonId != personId">
     f.d. {{ oldPersonId | PersonIdFormatter }}
