--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -363,6 +363,7 @@
   .utkast-footer {
     margin-bottom: 50px;
   }
+
   .fixed-bottom {
     position: fixed;
     bottom: 0;
@@ -371,9 +372,9 @@
     padding-bottom: 20px;
   }
 
-  .control-label {
+/*  .control-label {
     font-weight: bold;
-  }
+  }*/
 
   .btn-link-link {
     border: 0;
