--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSekretessAvliden/wcSekretessAvliden.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSekretessAvliden/wcSekretessAvliden.directive.scss
@@ -1,3 +1,5 @@
-wc-alert-message.patient-alert .alert {
-  margin: 10px 0 -20px 0;
+wc-sekretess-avliden {
+  wc-alert-message .alert {
+    margin: 14px 0 0 0;
+  }
 }
